CSS Basic Styling

--- a/client/index.html
+++ b/client/index.html
@@ -2,4 +2,9 @@
 <title></title>
 <main></main>
 <script src="/bundle.js"></script>
+<!-- font-awesome -->
+<script
+    src="https://kit.fontawesome.com/9c03ecbd21.js"
+    crossorigin="anonymous"
+></script>
 <link rel="stylesheet" href="/main.css" />
